Updates to compton.conf, i3blocks.conf, etc.

--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -6,7 +6,7 @@ separator=false
 #border_right=0
 #border_bottom=0
 #border_left=0
-
+#
 [vpn]
 label=
 command=scripts/blocks/blk-vpn
@@ -16,8 +16,13 @@ interval=3
 label=
 command=scripts/blocks/blk-wifi
 interval=5
-separator_block_width=14
-#border=#ffffff
+separator_block_width=18
+
+[temp]
+label=
+command=scripts/blocks/blk-temp
+interval=5
+separator_block_width=18
 
 [volume]
 label=
@@ -28,19 +33,18 @@ separator_block_width=7
 [battery]
 label=
 command=scripts/blocks/blk-bat
-separator_block_width=16
+separator_block_width=18
 interval=3
 
 [date]
 label=
-command=date +"%m/%d/%y"
+command=date +"%A %D"
 separator_block_width=7
 interval=5
 
 [time]
 label=
 command=date +"%I:%M %p"
-separator_block_width=16
 interval=5
 
 
