--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,8 @@ set-window-option -g clock-mode-colour colour7
 ## status bar
 set -g status-interval 5
 set -g status-justify left
-set -g status-left-length 5
-set -g status-left '#[fg=colour4] '
-set -g status-right '#[fg=colour15] #($HOME/scripts/grab-temp)  #($HOME/scripts/blocks/blk-uptime) '
-
+set -g status-left-length 20
+set -g status-left '#[fg=colour7][#I,#P] '
+set -g status-right '#[fg=colour15] #($HOME/scripts/blocks/blk-uptime) '
+set -g window-status-format '#I:#W'
+set -g window-status-current-format '#I:#W-'
