--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -25,12 +25,12 @@ shadow-exclude = [
 
 # Opacity
 menu-opacity = 1.0;
-inactive-opacity = 0.80; 
-active-opacity = 1.0;
+inactive-opacity = .85; 
+#active-opacity = 1.0;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
 alpha-step = 0.05;
-inactive-dim = 0.0;
+inactive-dim = 0.05;
 inactive-dim-fixed = false;
 blur-background = false;
 blur-background-frame = false;
@@ -43,33 +43,35 @@ blur-kern = "3x3box"
 #    "window_type = 'desktop'",
 #    "_GTK_FRAME_EXTENTS@:c"
 #];
-# opacity-rule = [ "80:class_g = 'URxvt'" ];
+#opacity-rule = [ "100:name_g = 'Firefox'" ];
 
 # Fading
-fading = false;
-fade-delta = 30;
-fade-in-step = 0.3;
-fade-out-step = 0.3;
-no-fading-openclose = true;
-no-fading-destroyed-argb = true;
+fading = true;
+fade-delta = 4;
+fade-in-step = 0.02;
+fade-out-step = 0.02;
+#no-fading-openclose = true;
+#no-fading-destroyed-argb = true;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender"
+backend = "glx"
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-# use-ewmh-active-win = true;
+use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "none";
+vsync = "opengl-swc";
 dbe = false;
 paint-on-overlay = true;
 # sw-opti = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [ ];
+sw-opti = true;
+unredir-if-possible =  true;
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
