updated all dot files

--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -1,14 +1,14 @@
 # ~/.config/compton.i3.conf
 
 # Shadow
-shadow = false;
+shadow = true;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 4;
-shadow-offset-x = 2;
-shadow-offset-y = 2;
-shadow-opacity = 0.35;
+shadow-radius = 3;
+shadow-offset-x = 3;
+shadow-offset-y = 3;
+shadow-opacity = 0.50;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
@@ -25,7 +25,7 @@ shadow-exclude = [
 
 # Opacity
 menu-opacity = 1.0;
-inactive-opacity = .85; 
+inactive-opacity = .70; 
 #active-opacity = 1.0;
 frame-opacity = 1.0;
 inactive-opacity-override = false;
