--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,8 +30,8 @@ set-window-option -g window-status-current-bg colour8
 set-window-option -g window-status-current-attr default # alt options: bright, dim
 
 ## pane border
-set-option -g pane-border-fg colour8
-set-option -g pane-active-border-fg colour10
+set-option -g pane-border-fg colour0
+set-option -g pane-active-border-fg colour12
 
 ## message text
 set-option -g message-fg colour9
@@ -50,6 +50,6 @@ set -g status-interval 5
 set -g status-justify left
 set -g status-left-length 20
 set -g status-left '#[fg=colour7][#I,#P] '
-set -g status-right '#[fg=colour15] #($HOME/scripts/blocks/blk-uptime) '
+set -g status-right '#[fg=colour15] '
 set -g window-status-format '#I:#W'
 set -g window-status-current-format '#I:#W-'
