switched to lemonbar, updates and new files added

--- a/.i3/config
+++ b/.i3/config
@@ -1,213 +1,1 @@
-# i3 config file (v4)
-
-set $mod Mod4
-
-font pango:Dina 8
-
-# set gaps
-gaps inner 12
-gaps outer 8 
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod Mod4
-
-# start a terminal
-bindsym $mod+Return exec urxvt
-
-# kill focused window
-bindsym $mod+Shift+q kill
-
-# binding for dmenu2
-#bindsym $mod+d exec dmenu_run -fn dina-8:normal -o 0.95 -nb '#000000' -nf '#fdfdfd' -sb '#000000' -sf '#e7d90d' -dc '#000000' -dim 0.3
-
-# binding for rofi
-bindsym $mod+d exec rofi -show run -font "dina 8" -lines 7 -width 35 -bw 3 
-
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-
-# change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
-bindsym $mod+h split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
-
-## workspace settings
-# set workspace names
-set $ws1 1:◼
-set $ws2 2:◼
-set $ws3 3:◼
-set $ws4 4:◼
-set $ws5 5:◼
-set $ws6 6:◼
-set $ws7 7:◼
-set $ws8 8:◼
-set $ws9 9:◼
-set $ws10 10:◼
-
-# switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
-
-# f1-f12 bindings for applications
-bindsym $mod+F1 exec firefox
-bindsym $mod+F2 exec thunderbird
-bindsym $mod+F3 exec gimp
-bindsym $mod+F4 exec gpick
-#bindsym $mod+F5 exec scrot -d 5
-
-bindsym $mod+Shift+F11 exec systemctl reboot
-bindsym $mod+Shift+F12 exec systemctl poweroff
-bindsym $mod+Shift+F10 exec pkill -KILL -u $USER
-bindsym $mod+Shift+F9 exec xscreensaver-command --lock
-
-# amixer volume up-down-mute bindings
-bindsym $mod+0x005b exec amixer -q sset Master 5%-
-bindsym $mod+0x005d exec amixer -q sset Master 5%+
-bindsym $mod+0x005c exec amixer -q sset Master toggle
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#        status_command i3status
-#}
-
-# configure mouse focus 
-focus_follows_mouse no
-
-#bar {
-
-    #font pango: dina, Font Awesome 8
-    #workspace_buttons yes
-    #strip_workspace_numbers yes
-    #status_command i3blocks
-    #position top
-    
-    #colors {
-        
-        #background #000000
-        #statusline #8b8b8b
-        #separator  #000000
-        
-        #class              border  backgr  text
-        #focused_workspace   #000000 #000000 #e7d90d
-        #active_workspace    #000000 #000000 #e7d90d
-        #inactive_workspace  #000000 #000000 #3b3b3b
-        #urgent_workspace    #000000 #000000 #e83099
- 
-    #}
-#}
-
-# configure borders
-new_window pixel 3
-
-# class		            	border	backgr	text	indicator
-client.focused              #1a1a1a #163d5a #fefecc #163d5a 
-client.focused_inactive     #1a1a1a #010b13 #fefecc #010b13 
-client.unfocused            #1a1a1a #010b13 #fefecc #010b13 
-client.urgent               #1a1a1a #010b13 #fefecc #010b13 
-
-# configure startup applications
-
-# set lemonbar to run 
-exec ~/scripts/lbar-launcher
-
-# configure compton for startup and during restart
-#exec compton -b 
-#exec_always compton -b 
+/home/devosion/.i3/config
