--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,71 @@
-/home/devosion/.tmux.conf
+# tmux configuration file
+# reload .tmux.conf: tmux source-file ~/.tmux.conf
+
+## configure tmux for vi keys
+setw -g mode-keys vi
+
+## quick pane cycling
+# ^ is ctrl
+unbind ^A
+bind ^A select-pane -t :.+
+
+# vim-like pane switching
+# switch pane left
+unbind-key h
+bind-key h select-pane -L
+# switch pane right
+unbind-key l
+bind-key l select-pane -R
+# switch pane up
+unbind-key k
+bind-key u select-pane -U
+# switch pane down
+unbind-key j
+bind-key j select-pane -D
+
+## force reload of config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+### tmux color definitions
+## default statusbar colors
+set-option -g status-fg colour12
+set-option -g status-bg colour8
+set-option -g status-attr default
+
+## default window title colors
+set-window-option -g window-status-fg colour7
+set-window-option -g window-status-bg colour8
+set-window-option -g window-status-attr default # alt options: bright, dim
+
+## active window title colors
+set-window-option -g window-status-current-fg colour15
+set-window-option -g window-status-current-bg colour0
+set-window-option -g window-status-current-attr default # alt options: bright, dim
+
+## pane border
+set-option -g pane-border-fg colour0
+set-option -g pane-active-border-fg colour12
+
+## message text
+set-option -g message-fg colour9
+set-option -g message-bg colour0
+
+## pane number display
+set-option -g display-panes-active-colour colour2 
+set-option -g display-panes-colour colour8
+
+## clock
+set-window-option -g clock-mode-colour colour7
+
+### tmux status bar definitions
+## status bar
+set -g status-interval 5
+set -g status-justify left
+set -g status-left-length 20
+#set -g window-status-format '#[bg=colour0] #I:#W '
+#set -g window-status-current-format '#I:#W-'
+set -g status-left '#[fg=colour248][#[fg=colour7]#I,#P#[fg=colour248]] '
+set -g status-right '#[fg=colour248]#[bg=colour0] #(/$HOME/scripts/blocks/temp.sh) #[bg=colour8] #[fg=colour250]#(/$HOME/scripts/blocks/uptime.sh) '
+setw -g window-status-current-format ' #I#[fg=colour12]:#[fg=colour15]#W#[fg=colour12]#F '
+setw -g window-status-format '#I#[fg=colour7]:#[fg=colour69]#W#[fg=colour244]#F'
